Implemented MAGETWO-3099: Remove Scope Related Fields from Manage Customers

--- a/app/code/core/Enterprise/GiftCardAccount/view/adminhtml/edit/tab/info.phtml
+++ b/app/code/core/Enterprise/GiftCardAccount/view/adminhtml/edit/tab/info.phtml
@@ -20,6 +20,7 @@
 </form>
 <?php endif;*/ ?>
 </div>
+<?php if (!Mage::app()->isSingleStoreMode()): ?>
 <script type="text/javascript">
 //<![CDATA[
     Event.observe(window, 'load', updateCurrency);
@@ -36,3 +37,4 @@
     }
 //]]>
 </script>
+<?php endif; ?>
