--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/attribute/set/main.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/attribute/set/main.phtml
@@ -375,19 +375,17 @@
 
                     rightBeforeInsert : function(tree, nodeThis, node, newParent) {
                         var empty = TreePanels.root2.findChild('id', 'empty');
-                        if( empty ) {
+                        if(empty) {
                             return false;
                         }
 
-                        if (node.attributes.is_user_defined == 0) {
+                        if (node.attributes.is_user_defined == 0 && node.attributes.is_mandatory == 1) {
                             alert('<?php echo Mage::helper('Mage_Core_Helper_Data')->jsQuoteEscape(Mage::helper('Mage_Catalog_Helper_Data')->__('You cannot remove system attribute from this set.')) ?>');
                             return false;
-                        }
-                        else if (node.attributes.is_configurable == 1) {
+                        } else if (node.attributes.is_configurable == 1) {
                             alert('<?php echo Mage::helper('Mage_Core_Helper_Data')->jsQuoteEscape(Mage::helper('Mage_Catalog_Helper_Data')->__('This attribute is used in configurable products. You cannot remove it from the attribute set.')) ?>');
                             return false;
-                        }
-                        else {
+                        } else {
                             return true;
                         }
                     },
