--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/attribute/set/main.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/attribute/set/main.phtml
@@ -243,7 +243,7 @@
                         for( i in currentNode.childNodes ) {
                             if( currentNode.childNodes[i].id ) {
                                 child = editSet.currentNode.childNodes[i];
-                                if( child.attributes.is_user_defined != 1 ) {
+                                if( child.attributes.is_unassignable != 1 ) {
                                     return true;
                                 }
                             }
