--- a/app/code/core/Mage/Core/view/frontend/prototype/magento.css
+++ b/app/code/core/Mage/Core/view/frontend/prototype/magento.css
@@ -7,6 +7,15 @@
  * @license     {license_link}
  */
 
+/**
+ * {license_notice}
+ *
+ * @category    Mage
+ * @package     Mage_Core
+ * @copyright   {copyright}
+ * @license     {license_link}
+ */
+
 .dialog { border:1px solid #555; }
 .dialog .bot { display:none !important; }
 .overlay_magento { background-color:#000; filter:alpha(opacity=60); -moz-opacity:.6; opacity:.6; -webkit-opacity:.6; }
@@ -43,3 +52,24 @@
 
 /* FOR IE */
 * html .magento_close { background-image:none; filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="../themes/magento/window_close.png", sizingMethod="crop"); }
+
+
+.dialog.ui-dialog, .ui-dialog .ui-dialog-titlebar, .ui-dialog .ui-dialog-buttonset button.button { -webkit-border-radius: 0px; border-radius: 0px; }
+.dialog.ui-dialog { border:1px solid #555; display: none; padding: 0; }
+.ui-widget-overlay { background:#000; filter:alpha(opacity=60); -moz-opacity:.6; opacity:.6; -webkit-opacity:.6; position: absolute; left:0px; top:0px; }
+.ui-dialog .ui-dialog-titlebar { border-bottom:1px solid #e6e6e6; background:#6a838b url(magento/top_bg.gif) 0 100% repeat-x; height:28px; border: none; }
+.ui-dialog .ui-dialog-titlebar span { margin: 0px; }
+.ui-dialog .ui-dialog-title { float:left; width:100%; font:bold 12px/28px Arial, Helvetica, sans-serif; color:#fff; text-align:left; cursor: move; }
+.ui-dialog .ui-dialog-content, .ui-dialog .ui-dialog-titlebar, .ui-dialog .ui-dialog-buttonset { padding: 0 6px; }
+.ui-dialog .ui-icon { text-indent: -99999px; }
+.ui-dialog .ui-dialog-titlebar-close { width:16px; height:16px; background:url(magento/window_close.png) no-repeat 0 0; position:absolute; top:5px; right:7px; cursor:pointer; z-index:1000; margin: 0px; padding: 0; }
+.ui-dialog .ui-dialog-titlebar-close .ui-icon { display: none; }
+.ui-dialog .ui-dialog-titlebar-close.ui-state-hover { border: none; }
+.ui-dialog .ui-dialog-content form { display: block; overflow: hidden; }
+.ui-dialog .ui-dialog-content { background: #fafafa url(magento/content_bg.gif) 0 0 repeat-x; overflow: auto; }
+.ui-dialog .ui-dialog-buttonpane { background: #fafafa; margin: 0; padding: 0; border: none;}
+.ui-dialog .ui-dialog-buttonset { padding:10px; text-align:right; }
+.ui-dialog .ui-dialog-buttonset input.button { border-width:1px; border-style:solid; border-color:#ed6502 #a04300 #a04300 #ed6502;  background:#ffac47 url(magento/btn_bg.gif) 0 100% repeat-x; padding:0 7px 1px 7px; font:bold 12px/18px Arial, Helvetica, sans-serif; color:#fff; cursor:pointer; text-align:center; white-space:nowrap; margin-left: 5px; }
+.ui-dialog .ui-dialog-buttonset button.button { margin-left: 5px; background: #FFAC47; border-color: #ED6502 #A04300 #A04300 #ED6502; border-style: solid; border-width: 1px; color: #FFFFFF; cursor: pointer; font: bold 12px arial,helvetica,sans-serif; padding: 0; }
+.ui-dialog .ui-dialog-buttonset button.button span { padding: 0 7px 1px; text-align: center !important; white-space: nowrap; display: block; background: transparent; height: auto; color:#ffffff; }
+.ui-dialog .ui-dialog-buttonset button.button span span span { display:inline; background:none; padding:0; height:auto; }
