--- a/app/design/adminhtml/default/default/skin/enterprise/boxes.css
+++ b/app/design/adminhtml/default/default/skin/enterprise/boxes.css
@@ -61,7 +61,7 @@
     text-align:center;
     z-index:501;
     }
-#loading-mask {
+#loading-mask, .loading-mask {
     background:url(images/blank.gif) repeat;
     position:absolute;
     color:#d85909;
@@ -72,7 +72,7 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; /* IE8 */
     z-index:500;
     }
-#loading-mask .loader {
+#loading-mask .loader, .loading-mask .loader {
     position:fixed;
     top:45%;
     left:50%;
@@ -85,6 +85,17 @@
     font-weight:bold;
     text-align:center;
     z-index:1000;
+    }
+.loading-mask .loader {
+    position: absolute;
+    }
+.loading-mask {
+    filter:alpha(opacity=60);
+    -moz-opacity:.6;
+    opacity:.6;
+    -webkit-opacity:.6;
+    background: #ffffff;
+    z-index: 2500;
     }
 
 #message-popup-window-mask { position:absolute; top:0; right:0; bottom:0; left:0; width:100%; height:100%; z-index:980; background-color:#efefef; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=50); opacity:0.5; }
