--- a/app/code/core/Mage/Backend/view/adminhtml/widget/grid/massaction_extended.phtml
+++ b/app/code/core/Mage/Backend/view/adminhtml/widget/grid/massaction_extended.phtml
@@ -7,6 +7,9 @@
  * @copyright   {copyright}
  * @license     {license_link}
  */
+/**
+* @deprecated support Magento 1.x grid massaction implementation
+ */
 ?>
 <div id="<?php echo $this->getHtmlId() ?>">
 <table cellspacing="0" cellpadding="0" class="massaction">
@@ -35,7 +38,7 @@
                             <label><?php echo $this->__('Actions') ?></label>
                             <select id="<?php echo $this->getHtmlId() ?>-select" class="required-entry select absolute-advice local-validation">
                                 <option value=""></option>
-                                <?php foreach($this->getItems() as $_item):?>
+                                <?php foreach($this->getItems() as $_item): ?>
                                     <option value="<?php echo $_item->getId() ?>"<?php echo ($_item->getSelected() ? ' selected="selected"' : '')?>><?php echo $_item->getLabel() ?></option>
                                 <?php endforeach; ?>
                             </select>
@@ -54,11 +57,7 @@
             <div class="no-display">
             <?php foreach($this->getItems() as $_item): ?>
                 <div id="<?php echo $this->getHtmlId() ?>-item-<?php echo $_item->getId() ?>-block">
-                    <?php
-                        if ('' != $_item->getBlockName()) {
-                            echo $this->getChildHtml($_item->getBlockName());
-                        }
-                    ?>
+                    <?php echo $_item->getAdditionalActionBlockHtml() ?>
                 </div>
             <?php endforeach; ?>
             </div>
